log
Thu Apr  7 06:54:29 UTC 2022: 
 hashmap.c | 27 +++++++++++++++------------
 1 file changed, 15 insertions(+), 12 deletions(-)
 tests:  1|5
total_score: 10/70
963b600
Thu Apr  7 15:14:11 UTC 2022: 
 tests:  1|5
total_score: 10/70
f28a5c2
Thu Apr  7 15:36:09 UTC 2022: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:8: error: too few arguments to function ‘is_equal’
     if(is_equal(map->buckets[index]->key)==1) return;
        ^~~~~~~~
hashmap.c:34:5: note: declared here
 int is_equal(void *key1, void *key2) {
     ^~~~~~~~
hashmap.c:53:48: error: expected statement before ‘]’ token
     map->buckets[index]= createPair(key,value);]
                                                ^
Compilation failed
f9dd4f9
Thu Apr  7 15:36:23 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:8: error: too few arguments to function ‘is_equal’
     if(is_equal(map->buckets[index]->key)==1) return;
        ^~~~~~~~
hashmap.c:34:5: note: declared here
 int is_equal(void *key1, void *key2) {
     ^~~~~~~~
Compilation failed
0c23c34
Thu Apr  7 15:37:15 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
2f2b49e
